--- a/src/pages/AuxiliaresPage/AuxiliaresPage.css
+++ b/src/pages/AuxiliaresPage/AuxiliaresPage.css
@@ -13,9 +13,19 @@
 }
 
 .table-container {
-    max-width: 100%;
-    overflow-x: auto;
+    max-width: 100vw;   /* 100% del ancho de la ventana */
+    height: 100vh;  /* 100% del alto de la ventana */
+    overflow: auto; /* scroll si el contenido es mayor */
+    margin: 0;      /* elimina márgenes externos */
+    padding: 0;     /* elimina rellenos internos */
 }
+
+.container, .container-fluid {
+    max-width: 100% !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 
 .tabla-auxiliares {
     background-color: #ffffff;
